welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: type mismatch;
 found   : String("decalage")
 required: Int
    val "decalage" = litMessage().toInt
        ^Array2:17: error: not found: value decalage
      setCouleurBrosse(T((j+decalage)%x))
                            ^